--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.1.3",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "^50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "^18.2.0",
